parser/src/test/resources/corpus/valid/33_publish_with_date.ff
rule "Publish NAV" {
  publish nav as of valuation date
}
