parser/src/test/resources/corpus/invalid/33_publish_missing_subject.ff
rule "Publish Missing Subject" {
  publish
}
